@@ -15,7 +15,7 @@
 
 # Arch not supporting hw watchpoints does not imply no_hardware_watchpoints set.
 if {(![istarget "i?86-*-*"] && ![istarget "x86_64-*-*"]
-     && ![istarget "ia64-*-*"] && ![istarget "s390*-*-*"])
+     && ![istarget "ia64-*-*"])
     || [target_info exists gdb,no_hardware_watchpoints]} then {
     verbose "Skipping hbreak test."
     return
